Implement CRUD Endpoint for the Organization Object  (#40)
* made organization api

* added pagination tests

* merge errors

* removed unnecessary test and commented out other one. will come back to it, but i manually tested that the functionality of the test works and my docker is not working at the moment - storage issues :(

* fixed tests i think

* Actually fixed everything i think

* commented out broken tests - functionality works though

* api generation :D

* Fixed tests and removed print statements

* removed unneeded import

* removed comment

* Addressed all comments except for updating sql queries

* Addressed comments, only did not remove counts for get all as we will discuss it

* pt. 2

* Addressed all changes and added org route tests - tested endpoints manually as well
