# backend/internal/storage/postgres/schema/organization/delete.go
@@ -1,0 +1,42 @@
+package organization
+
+import (
+	"context"
+	"skillspark/internal/errs"
+	"skillspark/internal/models"
+	"skillspark/internal/storage/postgres/schema"
+
+	"github.com/google/uuid"
+)
+
+func (r *OrganizationRepository) DeleteOrganization(ctx context.Context, id uuid.UUID) (*models.Organization, *errs.HTTPError) {
+	query, err := schema.ReadSQLBaseScript("organization/sql/delete.sql")
+	if err != nil {
+		errr := errs.InternalServerError("Failed to read base query: ", err.Error())
+		return nil, &errr
+	}
+
+	row := r.db.QueryRow(ctx, query, id)
+
+	var deletedOrganization models.Organization
+
+	err = row.Scan(
+		&deletedOrganization.ID,
+		&deletedOrganization.Name,
+		&deletedOrganization.Active,
+		&deletedOrganization.PfpS3Key,
+		&deletedOrganization.LocationID,
+		&deletedOrganization.CreatedAt,
+		&deletedOrganization.UpdatedAt,
+	)
+	if err != nil {
+		if err.Error() == "no rows in result set" {
+			errr := errs.NotFound("Organization", "id", id.String())
+			return nil, &errr
+		}
+		errr := errs.InternalServerError("Failed to delete organization: ", err.Error())
+		return nil, &errr
+	}
+
+	return &deletedOrganization, nil
+}
